plugins {
	id "java"
	id "org.springframework.boot" version "3.2.0"
	id "io.spring.dependency-management" version "1.1.4"
}

rootProject.subprojects { subproject ->

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21

	group = project.getProperty("group")
	version = project.getProperty("version")
	artifactName = subproject.getProperty("artifactName")
	packaging = subproject.getProperty("packaging")

	subproject.ext.versions = [
			lombok                    : "1.18.24",
	]
}

bootJar {
	enabled = false
}

jar {
	enabled = true
}
